--- a/settings.template.yaml
+++ b/settings.template.yaml
@@ -3,6 +3,6 @@ redis:
   host: redis
   port: 6379
   stream_id: stream1
-  input_stream_prefix: objecttracker
-  output_stream_prefix: mystage
+  input_stream_prefix: objectdetector
+  output_stream_prefix: aggragator
 prometheus_port: 8000
