--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,7 @@ prometheus-client = "^0.21.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "8.4.1"
