--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -58,4 +58,4 @@ jobs:
         run: |
           source .venv/bin/activate
           pytest tests/
-          coverage report
+      #    coverage report
