--- a/settings.template.yaml
+++ b/settings.template.yaml
@@ -4,5 +4,5 @@ redis:
   port: 6379
   stream_id: stream1
   input_stream_prefix: objectdetector
-  output_stream_prefix: aggragator
+  output_stream_prefix: aggregator
 prometheus_port: 8000
