--- a/settings.template.yaml
+++ b/settings.template.yaml
@@ -5,4 +5,10 @@ redis:
   stream_id: stream1
   input_stream_prefix: objectdetector
   output_stream_prefix: aggregator
+chunk:
+  buffer_size: 3
+  time_in_ms: 2000
+  geo_coordinate:
+    latitude: 10
+    longitude: 10
 prometheus_port: 8000
