--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -13,29 +13,16 @@ on:
 
 jobs:
   pr-build-poetry:
-    runs-on: ubuntu-latest
+    name: PR Build with Poetry
+    runs-on: [self-hosted, linux, X64]
+    container:
+        image: starwitorg/base-python-image:0.0.1
     steps:
       #----------------------------------------------
       #       check-out repo and set-up python
       #----------------------------------------------
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Set up python
-        id: setup-python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-      #----------------------------------------------
-      #  -----  install & configure poetry  -----
-      #----------------------------------------------
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: 2.1.3
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          virtualenvs-path: .venv
-          installer-parallel: true
 
       #----------------------------------------------
       #       load cached venv if cache exists
@@ -45,7 +32,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       #----------------------------------------------
       # install dependencies if cache does not exist
       #----------------------------------------------
