--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -26,6 +26,9 @@ jobs:
 
       - name: Setup
         run: |
+          echo "POETRY_VER=$(poetry version -s)" >> $GITHUB_ENV
+          echo "PYTHON_VER=$(python --version | cut -d ' ' -f 2)" >> $GITHUB_ENV
+          python --version
           poetry --version
 
       #----------------------------------------------
