show unit tests

--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -58,19 +58,12 @@ jobs:
       - name: Run tests
         run: |
           mkdir -p test-results
-          poetry run pytest --junitxml=test-results/pytest-report.xml
+          poetry run pytest --junitxml=test-results/pytest.xml
 
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-results
-          path: test-results/pytest-report.xml
+          name: test-results
+          path: test-results
   
-      - name: Publish results to UI
-        if: always()
-        uses: dorny/test-reporter@v1
-        with:
-          name: Pytest Results
-          path: test-results/pytest-report.xml
-          reporter: java-junit
