--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -65,9 +65,11 @@ jobs:
           mkdir -p test-results
           poetry run pytest --junitxml=test-results/pytest.xml
 
-      - name: Upload test results
+      - name: Surface failing tests
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: pmeier/pytest-results-action@main
         with:
-          name: test-results
-          path: test-results/pytest.xml
+          # A list of JUnit XML files, directories containing the former, and wildcard
+          # patterns to process.
+          # See @actions/glob for supported patterns.
+          path: test-results.xml
