--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -68,3 +68,10 @@ jobs:
         run: |
           poetry run pytest --junit-xml test-results.xml
 
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: pytest test results            # Name of the check run which will be created
+          path: test-results.xml    # Path to test results
+          reporter: java-junit 
