--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -60,11 +60,18 @@ jobs:
       #----------------------------------------------
       - name: Install project
         run: poetry install --no-interaction
-
+        
       #----------------------------------------------
       #              run test suite
       #----------------------------------------------
       - name: Run tests
         run: |
-          poetry run pytest --junit-xml test-results.xml
+          mkdir -p test-results
+          poetry run pytest --junit-xml test-results/test-results.xml
 
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results/**/*.xml
