--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -67,11 +67,4 @@ jobs:
       - name: Run tests
         run: |
           mkdir -p test-results
-          poetry run pytest --junit-xml test-results/test-results.xml
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: test-results/**/*.xml
+          poetry run pytest -vvv
