--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   pr-build-poetry:
-    runs-on: ubuntu-latest
+    runs-on: starwitorg/base-python-image:0.0.5
     steps:
       #----------------------------------------------
       #       check-out repo and set-up python
