--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -36,6 +36,9 @@ jobs:
       - name: ls
         run: ls 
 
+      - name: pwd
+        run: pwd 
+
       #----------------------------------------------
       # install your root project, if required
       #----------------------------------------------
