--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -34,7 +34,7 @@ jobs:
           poetry --version
 
       - name: ls
-        run: ls -al
+        run: ls -al /
 
       - name: pwd
         run: pwd 
