--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -55,9 +55,9 @@
         - name: Install dependencies 2
           if: steps.venv-cache-init.outputs.cache-hit != 'true'
           run: |
-            cd /cache
+            cd /cache-init
             poetry install --no-interaction --no-root
-            cp /cache/.venv /code/.venv || true
+            cp /cache-init/.venv /code/.venv || true
   
         #----------------------------------------------
         # install dependencies if cache does not exist
@@ -88,7 +88,7 @@
           if: steps.venv-cache-init.outputs.cache-hit != 'true'
           uses: actions/cache/save@v4
           with:
-            path: /cache/.venv
+            path: /cache-init/.venv
             key: venv-${{ runner.os }}-torch
   
     
