--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -44,9 +44,9 @@ jobs:
       #----------------------------------------------
       - name: Install project
         run: |
-          mv /.venv/ /code/.venv/
           cd /code
-          poetry install --no-interaction -vvv
+          poetry config virtualenvs.path /.venv
+          poetry install --no-interaction --no-root -vvv
           poetry run pytest
 
   
