--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -16,7 +16,7 @@ jobs:
     name: PR Build with Poetry
     runs-on: [self-hosted, linux, X64]
     container:
-        image: starwitorg/base-python-image:0.0.6
+        image: starwitorg/sae-cv-python-image:0.0.5
 
     steps:
       #----------------------------------------------
@@ -31,6 +31,11 @@ jobs:
           echo "PYTHON_VER=$(python3 --version | cut -d ' ' -f 2)" >> $GITHUB_ENV
           python --version
           poetry --version
+
+      - run: ln -s /root/.cache/ /github/home/.cache/
+
+      - run: ls -al /github/home/.cache/
+
       #----------------------------------------------
       # install your root project, if required
       #----------------------------------------------
