test poetry cache

--- a/.github/workflows/pr-build-poetry.yml
+++ b/.github/workflows/pr-build-poetry.yml
@@ -16,9 +16,10 @@ jobs:
     name: PR Build with Poetry
     runs-on: [self-hosted, linux, X64]
     container:
-        image: starwitorg/sae-cv-python-image:0.0.4
+        image: starwitorg/base-python-image:0.0.6
         volumes:
             - ./:/code
+            - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
     steps:
       #----------------------------------------------
       #       check-out repo and set-up python
