--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,15 @@ redis = "^5.2.1"
 pydantic = "2.11.7"
 pydantic-settings = "2.8.1"
 prometheus-client = "^0.21.1"
-torch = "2.7.1"
-torchvision = "0.22.1"
-pytest = "8.4.1"
+tensorrt-cu12 = {version = "^10.0.1", source = "nvidia"}
+tensorrt-cu12-libs = {version = "^10.0.1", source = "nvidia"}
+tensorrt-cu12-bindings = {version = "^10.0.1", source = "nvidia"}
+ultralytics = "^8.2.15"
+
+[[tool.poetry.source]]
+name = "nvidia"
+url = "https://pypi.nvidia.com/"
+priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core"]
