--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ tensorrt-cu12 = {version = "^10.0.1", source = "nvidia"}
 tensorrt-cu12-libs = {version = "^10.0.1", source = "nvidia"}
 tensorrt-cu12-bindings = {version = "^10.0.1", source = "nvidia"}
 ultralytics = "^8.2.15"
+pytest = "8.4.1"
 
 [[tool.poetry.source]]
 name = "nvidia"
