--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,86 +16,75 @@ permissions:
   contents: write
 
 jobs:
-  checkout:
-    name: checkout
-    runs-on: [self-hosted, linux, X64]
-
-    steps:
-      - name: checkout project definition
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: '0'
-  
-  createversion:
-    name: "Create new project version"
-    needs: checkout
+  pr-build-poetry:
+    name: PR Build with Poetry
     runs-on: [self-hosted, linux, X64]
     container:
-      image: acidrain/python-poetry:3.11-slim-1.8.5
-
+        image: starwitorg/base-python-image:0.0.6
+        volumes:
+            - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
     steps:
-    - name: create new version in pyproject.toml
-      run: |
-        poetry version $VERSION
-      env:
-        VERSION: ${{ inputs.versionChoice }}
+      #----------------------------------------------
+      #       check-out repo and set-up python
+      #----------------------------------------------
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-  pushversion:
-    name: checkin pyproject.toml and create github release
-    needs: createversion
-    runs-on: [self-hosted, linux, X64]
+      - name: Install GH CLI
+        uses: dev-hanz-ops/install-gh-cli-action@v0.2.0
 
-    steps:
-    - name: Install GH CLI
-      uses: dev-hanz-ops/install-gh-cli-action@v0.2.0
+      - name: create new version in pyproject.toml
+        run: |
+          poetry version $VERSION
+        env:
+          VERSION: ${{ inputs.versionChoice }}
 
-    - name: commit new version
-      run: |
-        git config --global user.email "code@starwit.de"
-        git config --global user.name "Starwit"
-        git remote set-url --push origin https://Starwit:$GITHUB_TOKEN@github.com/starwit/detection-aggregator.git
-        git add .
-        modifications=$(git status | grep "modified" || true)
-        if [ ! -z "$modifications" ]
-        then
-          echo "modifications found: $modifications"
-          git commit -m "modified project version" ./pyproject.toml
-          git push
-        fi 
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install project
+        run: |
+          poetry config cache-dir /root/.cache/pypoetry
+          bash -c ./start_make.sh
 
-    - name: Create github release
-      run: | 
-        APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        gh release create $APP_VERSION -F README.md
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        VERSION: ${{ inputs.versionChoice }}
-  
-  build:
-    name: "Build and run docker image"
-    needs: createversion
-    runs-on: [self-hosted, linux, X64]
+      - name: commit new version
+        run: |
+          git config --global user.email "code@starwit.de"
+          git config --global user.name "Starwit"
+          git remote set-url --push origin https://Starwit:$GITHUB_TOKEN@github.com/starwit/detection-aggregator.git
+          git add .
+          modifications=$(git status | grep "modified" || true)
+          if [ ! -z "$modifications" ]
+          then
+            echo "modifications found: $modifications"
+            git commit -m "modified project version" ./pyproject.toml
+            git push
+          fi 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Create github release
+        run: | 
+          APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
+          gh release create $APP_VERSION -F README.md
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ inputs.versionChoice }}
 
-    - name: Login internal docker registry
-      uses: docker/login-action@v3
-      with:
-        registry: docker.internal.starwit-infra.de
-        username: ${{ secrets.DOCKER_INTERNAL_USERNAME }}
-        password: ${{ secrets.DOCKER_INTERNAL_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: build docker
-      run: |
-        docker build -t docker.internal.starwit-infra.de/detection-aggregator:tmp .
+      - name: Login internal docker registry
+        uses: docker/login-action@v3
+        with:
+          registry: docker.internal.starwit-infra.de
+          username: ${{ secrets.DOCKER_INTERNAL_USERNAME }}
+          password: ${{ secrets.DOCKER_INTERNAL_PASSWORD }}
+
+      - name: build docker
+        run: |
+          docker build -t docker.internal.starwit-infra.de/detection-aggregator:tmp .
 
   publish_docker:
     name: "Publish docker"
-    needs: build
+    needs: pr-build-poetry
     runs-on: [self-hosted, linux, X64]
 
     steps:
@@ -114,7 +103,7 @@ jobs:
 
   publish_helm:
     name: "Publish helm chart"
-    needs: createversion
+    needs: pr-build-poetry
     runs-on: [self-hosted, linux, X64]
     
     steps:
