--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,14 +15,16 @@ on:
 permissions:
   contents: write
 
+env:
+  IMAGE_NAME: detection-aggregator
+  DOCKERHUB_USERNAME: starwit
+  DOCKERHUB_ORG: starwitorg   
+
 jobs:
   pr-build-poetry:
     name: PR Build with Poetry
     runs-on: [self-hosted, linux, X64]
-    container:
-        image: starwitorg/base-python-image:0.0.6
-        volumes:
-            - /home/githubrunner/.cache/pypoetry:/root/.cache/pypoetry
+
     steps:
       #----------------------------------------------
       #       check-out repo and set-up python
@@ -32,17 +34,6 @@ jobs:
 
       - name: Install GH CLI
         uses: dev-hanz-ops/install-gh-cli-action@v0.2.0
-
-      - name: create new version in pyproject.toml
-        run: |
-          poetry version $VERSION
-        env:
-          VERSION: ${{ inputs.versionChoice }}
-
-      - name: Install project
-        run: |
-          poetry config cache-dir /root/.cache/pypoetry
-          bash -c ./start_make.sh
 
       - name: commit new version
         run: |
@@ -71,53 +62,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login internal docker registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: docker.internal.starwit-infra.de
-          username: ${{ secrets.DOCKER_INTERNAL_USERNAME }}
-          password: ${{ secrets.DOCKER_INTERNAL_PASSWORD }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: build docker
+      - name: build and push docker
         run: |
-          docker build -t docker.internal.starwit-infra.de/detection-aggregator:tmp .
-
-  publish_docker:
-    name: "Publish docker"
-    needs: pr-build-poetry
-    runs-on: [self-hosted, linux, X64]
-
-    steps:
-    - name: Login internal docker registry
-      uses: docker/login-action@v3
-      with:
-        registry: docker.internal.starwit-infra.de
-        username: ${{ secrets.DOCKER_INTERNAL_USERNAME }}
-        password: ${{ secrets.DOCKER_INTERNAL_PASSWORD }}
-        
-    - name: push docker versioned
-      run: |
-        DOCKER_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        docker tag docker.internal.starwit-infra.de/detection-aggregator:tmp docker.internal.starwit-infra.de/detection-aggregator:$DOCKER_VERSION
-        docker push docker.internal.starwit-infra.de/detection-aggregator:$DOCKER_VERSION
-
-  publish_helm:
-    name: "Publish helm chart"
-    needs: pr-build-poetry
-    runs-on: [self-hosted, linux, X64]
-    
-    steps:
-    - name: get helm
-      uses: azure/setup-helm@v4
-
-    - name: run helm package
-      working-directory: deployment/helm
-      run: |
-        HELM_VERSION=$(cat ../../pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        helm package . --version $HELM_VERSION --app-version $HELM_VERSION
-
-    - name: run helm push
-      working-directory: deployment/helm
-      run: |
-        HELM_VERSION=$(cat ../../pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        curl -i --fail-with-body -u ${{ secrets.HELM_INTERNAL_USERNAME }}:${{ secrets.HELM_INTERNAL_PASSWORD }} --data-binary "@detection-aggregator-$HELM_VERSION.tgz" https://helm.internal.starwit-infra.de/api/charts
+          DOCKER_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
+          docker build -t ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:tmp .
+          docker tag ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:tmp ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:$DOCKER_VERSION
+          docker push ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:$DOCKER_VERSION
+          docker rmi ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:tmp
+          docker rmi ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:$DOCKER_VERSION
+          docker buildx prune -af
+  
