--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -48,6 +48,6 @@ jobs:
       - name: build apt package
         run: |
             echo "Build APT package"
-            bash -c "export PATH=/root/.local/bin/:$PATH; make build-deb"
+            bash -c "export PATH=/root/.local/bin/:$PATH; poetry self add poetry-plugin-export; make build-deb"
             echo "Finish building APT package"
 
