--- a/.github/workflows/build-publish-latest.yml
+++ b/.github/workflows/build-publish-latest.yml
@@ -18,24 +18,26 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v4
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
+      
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ env.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: build and push docker
       run: |
-        DOCKER_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-        docker build -t ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:tmp .
-        docker tag ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:tmp ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:$DOCKER_VERSION
-        docker push ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:$DOCKER_VERSION
-        docker rmi ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:tmp
-        docker rmi ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:$DOCKER_VERSION
-        docker buildx prune -af
+        echo "DOCKER_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)"  >> $GITHUB_ENV
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./dockerfile
+        push: true
+        tags: ${{ env.DOCKERHUB_ORG }}/${{ env.IMAGE_NAME }}:${{ env.DOCKER_VERSION }}-${{ github.run_number }}
 
 
