use app version

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Create github release
         run: | 
           APP_VERSION=$(cat pyproject.toml | grep "version" | cut -d'=' -f2 | xargs echo -n)
-          gh release create $APP_VERSION -F README.md --title "${VERSION}"
+          gh release create $APP_VERSION -F README.md --title "${APP_VERSION}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VERSION: ${{ inputs.versionChoice }}
